# dark-forest-nea

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile.toml  README.md  rustfmt.toml
client/: Cargo.toml  Makefile.toml  index.html
client/fonts/8-bit-limit/: 8bitlimit.txt
client/src/: console.rs  endpoint.rs  lib.rs  routes.rs  state.rs  ui.rs  updates.rs  view.rs
client/src/state/: server.rs
client/src/ui/: bordered.rs  form.rs  router.rs  style.rs  title_card.rs  view.rs
client/src/ui/router/: create_account.rs  editor.rs  explore.rs  index.rs  new_project.rs  not_found.rs  sign_in.rs  users.rs
client/src/ui/router/users/: route.rs
client/src/ui/router/users/route/: project.rs
client/src/ui/router/users/route/project/: route.rs
client/src/ui/router/users/route/project/route/: editor.rs  player.rs
client/src/ui/style/: global.rs
client/src/updates/: sign_in.rs
glue/: Cargo.toml  Makefile.toml
glue/src/: data.rs  endpoint.rs  hello.rs  lib.rs  qs.rs  routes.rs
glue/src/data/: create_account.rs  credentials.rs  endpoint.rs  sign_out.rs  signed_in.rs  validation.rs
report/: report.tex
server/: Cargo.toml  Makefile.toml
server/src/: cookie.rs  endpoint.rs  logger.rs  main.rs  routes.rs  state.rs  util.rs
server/src/endpoint/: create_account.rs  new_project.rs  refresh_token.rs  save_editor.rs  sign_in.rs  sign_out.rs  signed_in.rs  start_editor.rs
server/src/security/: jwt.rs
server/src/state/: database.rs
server/src/state/database/: project_store.rs  projects_list.rs  user.rs
shared/: Cargo.toml  Makefile.toml
shared/src/: data.rs  endpoint.rs  lib.rs  qs.rs  routes.rs  security.rs  util.rs  validation.rs
shared/src/data/: chapters.rs  create_account.rs  credentials.rs  hello.rs  new_project.rs  refresh_token.rs  security.rs  sign_in.rs  sign_out.rs  signed_in.rs  validation.rs
shared/src/endpoint/: endpoints.rs
shared/src/endpoint/endpoints/: create_account.rs  edit.rs  new_project.rs  refresh_token.rs  sign_in.rs  signed_in.rs
shared/src/endpoint/endpoints/edit/: init.rs  save.rs
