[package]
version = "0.1.0"
name = "client"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["Your Name <email@address.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.17"

[dependencies]
# Referenced commit fixes base url and memory bugs in Seed 0.7.0
# (https://github.com/seed-rs/seed/pull/454 + https://github.com/seed-rs/seed/pull/455).
# Replace with "0.8.0" once the new Seed version is released.
seed = { git = "https://github.com/seed-rs/seed.git" }
# seed_style = { package = "seed_style_preview", version = "0.1" }
seed_style = { package = "seed_style_preview", git = "https://github.com/rebo/seed_style_preview.git" }
shared = { path = "../shared" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
web-sys = "0.3"
time = "0.2.16"
bincode = "1.3.1"
anyhow = "1.0.32"
secrecy = "0.7.0"
shadow-clone = "1.2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = [] }
tracing-futures = "0.2.4"

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
