[package]
name = "server"
version = "0.1.0"
authors = ["Ethan Brierley <ethanboxx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.13" 
async-std = { version = "1.6.2", features = ["attributes"] }
env_logger = "0.7.1"
dotenv = "0.15.0"
http-types = "2.4"
shared = { path = "../shared" }
async-trait = "0.1"
mongodb = { version = "1.1", features = ["async-std-runtime"], default-features = false }
bson = "1.1"
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.8"
jsonwebtoken = "7.2.0"
chrono = "0.4"
time = "0.2.16"
once_cell = "1.4"
bincode = "1.3.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-log = "0.1.1"
tracing-futures = "0.2.4"
tide-tracing = "0.0.5"
secrecy = "0.7.0"
horrorshow = "0.8.3"
