[package]
name = "shared"
version = "0.1.0"
authors = ["Ethan Brierley <ethanboxx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
regex = "1.3.9"
secrecy = { version = "0.7.0", features = ["serde"] }
num-traits = "0.2.12"
indexmap = { version = "1.5.1", features = ["serde-1"] }
